
* 0.4.2 *

* Really fix what 0.4.1 was supposed to do, force SYBDBLIB compile.


* 0.4.1 *

* Undefine MSDBLIB in case others have explicitly compiled FreeTDS with "MS db-lib source compatibility: yes".


* 0.4.0 *

* Allow SYBEICONVI errors to pass thru so that bad data is converted to ? marks.

* Build native deps using MiniPortile [Luis Lavena]

* Allow Result#fields to be called before iterating over the results.

* Two new client helper methods, #sqlsent? and #canceled?. Possible to use these to determine current 
  state of the client and the need to use Result#cancel to stop processing active results. It is also 
  safe to call Result#cancel over and over again.

* Look for the syb headers only.


* 0.3.2 *

* Small changes while testing JRuby. Using options hash for connect vs many args.


* 0.3.1 *

* Fix bad gem build.


* 0.3.0 *

* Access stored procedure return codes.

* Make sure dead or not enabled connections are handled.

* Fix bad client after timeout & read from server errors.


* 0.2.3 *

*  Do not use development ruby/version, but simple memoize an eval check on init to find out, for 1.8.6 reflection.


* 0.2.2 *

* Fixed failing test in Ruby 1.8.6. DateTime doesn't support fractional seconds greater than 59. 
  See: http://redmine.ruby-lang.org/issues/show/1490 [Erik Bryn]


* 0.2.1 *

* Compatibility with 32-bit systems. Better cross language testing. [Klaus Gundermann]


* 0.2.0 *

* Convert GUID's in a more compatible way. [Klaus Gundermann]

* Handle multiple result sets in command buffer or stored procs. [Ken Collins]

* Fixed some compiler warnings. [Erik Bryn]

* Avoid segfault related to smalldatetime conversion. [Erik Bryn]

* Properly encode column names in 1.9. [Erik Bryn]


* 0.1.0 Initial release!
