@@ -41,6 +41,7 @@ task :compile => ["ports:freetds"] unless ENV['TINYTDS_SKIP_PORTS']
 
 Rake::ExtensionTask.new('tiny_tds', gemspec) do |ext|
   ext.lib_dir = 'lib/tiny_tds'
+  ext.config_options << "--enable-iconv" unless ENV['TINYTDS_SKIP_PORTS']
 end
 
 task :build => [:clean, :compile]
