@@ -1,9 +1,10 @@
 require 'mkmf'
 
-FREETDS_LIBRARIES = ['iconv','sybdb']
+FREETDS_LIBRARIES = ['sybdb']
+FREETDS_LIBRARIES.unshift 'iconv' if enable_config('iconv')
 FREETDS_HEADERS = ['sybfront.h', 'sybdb.h']
 
-dir_config('iconv')
+dir_config('iconv') if enable_config('iconv')
 dir_config('freetds')
 
 def root_paths
